--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta name="author" content="Demidova Kristina">
-        <link rel="stylesheet" href="./pages/style.css">
+        <link rel="stylesheet" href="./pages/index.css">
         <title lang="en">Mesto</title>
     </head>
     <body class="body">
@@ -14,12 +14,12 @@
             </header>
             <main class="content">
                 <section class="profile">
-                    <div class="personal-card profile__personal-card">
-                        <img class="personal-card__avatar" src="./images/Jacques-Yves_Cousteau.jpg" alt="Аватар профиля">
-                        <div class="personal-card__info">
-                            <h2 class="personal-card__name">Жак-Ив Кусто</h2>
-                            <button class="personal-card__edit-button" type="button" aria-label="Редактировать"></button>
-                            <p class="personal-card__activity">Исследователь океана</p>
+                    <div class="profile__personal-card">
+                        <img class="profile__avatar" src="./images/Jacques-Yves_Cousteau.jpg" alt="Аватар профиля">
+                        <div class="profile__info">
+                            <h1 class="profile__name">Жак-Ив Кусто</h1>
+                            <button class="profile__edit-button" type="button" aria-label="Редактировать"></button>
+                            <p class="profile__activity">Исследователь океана</p>
                         </div>
                     </div>
                     <button class="profile__add-button" type="button" aria-label="Добавить карточку"></button>
@@ -31,9 +31,9 @@
 
                         <li class="unmarked-list__item">
                             <article class="place">
-                                <image class="place__image" src="./images/karachaevsk.jpg" alt="Фото Карачаевска"></image>
+                                <img class="place__image" src="./images/karachaevsk.jpg" alt="Фото Карачаевска">
                                 <div class="place__info-box">
-                                    <h3 class="place__name">Карачаевск</h3>
+                                    <h2 class="place__name">Карачаевск</h2>
                                     <button class="place__like-button place__like-button_active" type="button"></button>
                                 </div>
                             </article>
@@ -41,9 +41,9 @@
 
                         <li class="unmarked-list__item">
                             <article class="place">
-                                <image class="place__image" src="./images/Albrus.jpg" alt="Фото горы Эльбрус"></image>
+                                <img class="place__image" src="./images/Albrus.jpg" alt="Фото горы Эльбрус">
                                 <div class="place__info-box">
-                                    <h3 class="place__name">Гора Эльбрус</h3>
+                                    <h2 class="place__name">Гора Эльбрус</h2>
                                     <button class="place__like-button" type="button"></button>
                                 </div>
                             </article>
@@ -51,9 +51,9 @@
 
                         <li class="unmarked-list__item">
                             <article class="place">
-                                <image class="place__image" src="./images/Dombai.jpg" alt="Фото Домбай"></image>
+                                <img class="place__image" src="./images/Dombai.jpg" alt="Фото Домбай">
                                 <div class="place__info-box">
-                                    <h3 class="place__name">Домбай</h3>
+                                    <h2 class="place__name">Домбай</h2>
                                     <button class="place__like-button" type="button"></button>
                                 </div>
                             </article>
@@ -61,9 +61,9 @@
 
                         <li class="unmarked-list__item">
                             <article class="place">
-                                <image class="place__image" src="./images/Albrus.jpg" alt="Фото горы Эльбрус"></image>
+                                <img class="place__image" src="./images/Albrus.jpg" alt="Фото горы Эльбрус">
                                 <div class="place__info-box">
-                                    <h3 class="place__name">Гора Эльбрус</h3>
+                                    <h2 class="place__name">Гора Эльбрус</h2>
                                     <button class="place__like-button" type="button"></button>
                                 </div>
                             </article>
@@ -71,9 +71,9 @@
 
                         <li class="unmarked-list__item">
                             <article class="place">
-                                <image class="place__image" src="./images/Dombai.jpg" alt="Фото Домбай"></image>
+                                <img class="place__image" src="./images/Dombai.jpg" alt="Фото Домбай">
                                 <div class="place__info-box">
-                                    <h3 class="place__name">Домбай</h3>
+                                    <h2 class="place__name">Домбай</h2>
                                     <button class="place__like-button" type="button"></button>
                                 </div>
                             </article>
@@ -81,9 +81,9 @@
 
                         <li class="unmarked-list__item">
                             <article class="place">
-                                <image class="place__image" src="./images/karachaevsk.jpg" alt="Фото Карачаево-Черкессия"></image>
+                                <img class="place__image" src="./images/karachaevsk.jpg" alt="Фото Карачаево-Черкессия">
                                 <div class="place__info-box">
-                                    <h3 class="place__name">Карачаево-Черкессия</h3>
+                                    <h2 class="place__name">Карачаево-Черкессия</h2>
                                     <button class="place__like-button" type="button"></button>
                                 </div>
                             </article>
@@ -100,9 +100,9 @@
                 <div class="popup__container">
                     <h3 class="popup__title">Редактировать профиль</h3>
                     <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
-                    <form class="popup__form" name="Edit-profile" action="" method="get">
-                        <input class="popup__input popup__input_name" type="text" name="name" value="Жак-Ив Кусто" placeholder="Имя">
-                        <input class="popup__input popup__input_activity" type="text" name="activity" value="Исследователь океана" placeholder="Деятельность">
+                    <form class="popup__form" name="Edit-profile" method="get">
+                        <input class="popup__input popup__input_type_name" type="text" name="name" value="Жак-Ив Кусто" placeholder="Имя">
+                        <input class="popup__input popup__input_type_activity" type="text" name="activity" value="Исследователь океана" placeholder="Деятельность">
                         <button type="submit" value="Сохранить" class="popup__save-button">Сохранить</button>
                     </form>
                 </div>
